Source/WebCore/animation/KeyframeEffect.h
@@ -120,7 +120,7 @@ public:
     void setComposite(CompositeOperation compositeOperation) { m_compositeOperation = compositeOperation; }
 
     void getAnimatedStyle(std::unique_ptr<RenderStyle>& animatedStyle);
-    void apply(RenderStyle&) override;
+    void apply(RenderStyle&, Optional<Seconds> = WTF::nullopt) override;
     void invalidate() override;
     void animationDidTick() final;
     void animationDidPlay() final;
